plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'trading'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	implementation 'org.slf4j:slf4j-api'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.java-websocket:Java-WebSocket:1.5.3'
	implementation 'org.json:json:20250517'
	implementation("org.webjars:stomp-websocket:2.3.4")
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation("org.postgresql:postgresql:42.7.6")
}

tasks.named('test') {
	useJUnitPlatform()
}
